--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -2,5 +2,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Rubik', sans-serif
+    font-family: 'Rubik', sans-serif;
+    color: white;
 }
