--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,17 @@
 div {
     word-break: break-all;
 }
+
+body {
+    background-color: #04275c;
+}
+
+#games {
+    display: flex;
+    flex-wrap: wrap;
+    /* justify-content:space-between; */
+}
+
+#filterSubmit {
+    margin-top: 20px;
+}
