--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,13 @@
 div {
     word-break: break-all;
 }
+
+.default-hidden {
+    display: none;
+}
+
+.card-content {
+    overflow-y: scroll !important;
+    padding-bottom: 48px !important;
+    word-break: break-word;
+}
